turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: '=' expected but ';' found.
  if(getCouleurSol() == Color.black)){
^LangtonsAnt:2: error: illegal start of simple expression
  if(getCouleurSol() == Color.black)){
                                    ^